--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,9 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
   encoding: utf8
+  host: localhost
+  username: "root"
+  password: ""
   variables:
     sql_mode: TRADITIONAL
 
