--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,4 +1,4 @@
-name: Linters
+name: Linters and Tests
 
 on: pull_request
 
@@ -16,10 +16,11 @@ jobs:
           ruby-version: 3.1.x
       - name: Setup Rubocop
         run: |
-          gem install --no-document rubocop:'~>1.57.1' # https://docs.rubocop.org/en/stable/installation/
+          gem install --no-document rubocop:'~>1.57.1'
           [ -f .rubocop.yml ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.rubocop.yml
       - name: Rubocop Report
         run: rubocop --color
+
   stylelint:
     name: Stylelint
     runs-on: ubuntu-22.04
@@ -34,3 +35,18 @@ jobs:
           [ -f .stylelintrc.json ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.stylelintrc.json
       - name: Stylelint Report
         run: npx stylelint "**/*.{css,scss}"
+
+  rspec:
+    name: RSpec Tests
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 3.1.x
+      - name: Setup Bundler
+        run: |
+          gem install bundler
+          bundle install
+      - name: Run RSpec Tests
+        run: bundle exec rspec
