--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: 3.1.x
+          ruby-version: 3.1.2
       - name: Setup Rubocop
         run: |
           gem install --no-document rubocop:'~>1.57.1'
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: 3.1.x
+          ruby-version: 3.1.2
       - name: Setup Bundler
         run: |
           gem install bundler
