--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -8,12 +8,12 @@ env:
 jobs:
   rubocop:
     name: Rubocop
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: 3.1.2
+          ruby-version: 3.1.x
       - name: Setup Rubocop
         run: |
           gem install --no-document rubocop:'~>1.57.1'
@@ -23,7 +23,7 @@ jobs:
 
   stylelint:
     name: Stylelint
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -38,12 +38,12 @@ jobs:
 
   rspec:
     name: RSpec Tests
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: 3.1.2
+          ruby-version: 3.1.x
       - name: Setup Bundler
         run: |
           gem install bundler
