--- a/config/database.yml
+++ b/config/database.yml
@@ -23,5 +23,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8
   database: interview_test
+  username: root
+  password: ""
+  host: localhost
