--- a/config/database.yml
+++ b/config/database.yml
@@ -23,9 +23,5 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
+  <<: *default
   database: interview_test
-  username: root
-  password: ""
-  host: localhost
