--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Rubocop
         run: |
           gem install --no-document rubocop:'~>1.57.1'
-          [ -f .rubocop.yml ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.rubocop.yml
+          [ -f .rubocop.yml ]
       - name: Rubocop Report
         run: rubocop --color
 
@@ -31,7 +31,7 @@ jobs:
           node-version: "18.x"
       - name: Setup Stylelint
         run: |
-          npm install --save-dev stylelint@15.11.x stylelint-scss@5.2.x stylelint-config-standard@34.0.x stylelint-csstree-validator
-          [ -f .stylelintrc.json ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.stylelintrc.json
+          yarn add --dev stylelint@15.11.x stylelint-scss@5.2.x stylelint-config-standard@34.0.x
+          [ -f .stylelintrc.json ]
       - name: Stylelint Report
         run: npx stylelint "**/*.{css,scss}"
