--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "private": true,
     "dependencies": {},
     "devDependencies": {
-        "stylelint": "^13.3.3",
-        "stylelint-config-standard": "^20.0.0",
+        "stylelint": "15.11.x",
+        "stylelint-config-standard": "34.0.x",
         "stylelint-csstree-validator": "^1.9.0",
-        "stylelint-scss": "^3.17.2"
+        "stylelint-scss": "5.2.x"
     },
     "scripts": {
         "lint:styles": "stylelint '**/*.{css,scss}'"
